1.17b15
	- Support custom Conetent-type header and to support Conent-ID. The
	custom Conent-type can be specified with the option -conent-type and the
	Conent-ID of the attachment can be specified as fifth value of the -attach
	option. Thanks to skalogryz for supplying the patch. Fixes Issue 30.
	(Nov-06-2013).

	- Added options -4 and -6 to force using IPv4 or IPv6 address of the SMTP
	server. Fixes Issue 26.
	(Oct-20-2013)

	- Added fourth option for -attach flag to specify the attachment name. 
	The default was the attachment filename. Example:
	-attach "/path/foo.txt,text/plain,a,bar.txt", the attchment name will be
	bar.txt instead of foo.txt.

	Note: the attachment filename must be the 4th option, that means you 
	have to specify the attachment type a or i if you want to change the 
	attachment name. Fixes Issue 27.

	(Oct-27-2013)

1.17b14
	- Multiline input with -M was completely broken.
	(Oct-20-2013)

1.17b13
	- Changed Copyright to more flexible BSD from GNU GPL. Added -copyright
	flag.
	(Oct-12-2013)

	- SMTP authentication was broken if the username and passwords are long
	enough to create longer than 60 characters base64 encoded string. A
	newline was added after 60 characters causing authentication to fail.
	Fixes Issue 20. Fixes Issue 22.
	(Oct-12-2013)

	- Support DESTDIR during installation. Fixes Issue 5.

	- Don't show SSL info in quiet mode. Fixes Issue 21.
	(Oct-12-2013)

	- New ommand line option -enc for Content-Transfer-Encoding. If your
	one line text message with -M is non-ascii, you should use -enc base64.
	Note: non-ascii input from windows cmd does not work at this time, 
	however it works fine in linux and mac.
	(Jul-01-2013)

1.17b12
	- Add \r\n to multiple one line messages specified by -M.
	Possible Fix for Issue 12.

	- Do not show attachments in verbose mode. The option -show_attach 
	will enable it. Fixes Issue 13.
	(Jun-16-2013)

1.17b11
	- mailsend writes "Mail sent successfully" message on stdout in